# gift

./: Cargo.toml  LICENCE.md  README.md
.github/workflows/: release.yml
benches/: preview.rs
src/: app.rs  cache.rs  config.rs  download.rs  events.rs  lib.rs  main.rs  preview.rs  run.rs  s3.rs  search.rs
src/handlers/: common.rs  delete.rs  help.rs  list.rs  mod.rs  preview.rs  rename.rs  search.rs  upload.rs
src/ui/: delete.rs  help.rs  list.rs  mod.rs  preview.rs  rename.rs  search.rs  status_bar.rs  upload.rs  util.rs
src/widgets/: text_input.rs
